# low-level-programming

./: .deepsource.toml  .gitignore  CMakeLists.txt  README.md  clang-tidy-checks.txt
.github/workflows/: cmake-single-platform.yml  codacy-coverage-reporter.yaml  codeql.yml
benchmark/: CMakeLists.txt  script.py
benchmark/benchs/: linked_blocks_insert.c  linked_blocks_mem.c  linked_blocks_wide_insert.c  linked_blocks_wide_mem.c  page_pool_mem.c  table-delete.c  table-insert.c  table-mem.c  table-ram.c  table-select.c  table-update.c
benchmark/benchs/legacy/: linked_blocks_insert.c  linked_blocks_wide_insert.c  linked_blocks_wide_mem.c
benchmark/src/: bench-utils.c  bench.h
docs/: main.tex
gtests/: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/backend/: data_type.h
src/backend/comporator/: comporator.c  comporator.h  conditions.h
src/backend/cursor/: cursor.c  cursor.h
src/backend/db/: db.c  db.h
src/backend/io/: LinkedPages.c  LinkedPages.h  caching.c  caching.h  file.c  file.h  file_manager.c  file_manager.h  io.c  io.h  linked_blocks.c  linked_blocks.h  linked_pages.c  linked_pages.h  pager.c  pager.h
src/backend/journal/: materializer.c  materializer.h  metatab.c  metatab.h  varchar_mgr.c  varchar_mgr.h
src/backend/page_pool/: linked_blocks.c  linked_blocks.h  page_pool.c  page_pool.h
src/backend/pager/: page.c  page.h  pager.c  pager.h
src/backend/pstack/: pstack.c  pstack.h
src/backend/table/: schema.c  schema.h  table.c  table.h  table_base.c  table_base.h  table_manager.c  table_manager.h
src/backend/utils/: parray.c  parray.h  parray64.c  parray64.h
src/backend/varchar/: varchar_manager.c  varchar_manager.h
src/core/command_processor/parser/: parse.h
src/core/io/: caching.c  caching.h  file.c  file.h  input_buffer.c  linked_pages.c  linked_pages.h  pager.c  pager.h
src/core/page_pool/: linked_blocks.c  linked_blocks.h  page_pool.c  page_pool.h
src/core/pstack/: pstack.c  pstack.h
src/core/virtual_machine/: execute_queries.c  execute_queries.h  meta_commands.c  meta_commands.h
src/generator/: table-gen.c  table-gen.h
src/interface/command_processor/parser/: parse.c  parse.h
src/interface/virtual_machine/: execute_queries.h  meta_commands.h
src/utils/: chunky_pool.c  chunky_pool.h  cstring.c  cstring.h  custom_print.c  custom_print.h  hashmap.h  hashtable.h  linked_list.c  linked_list.h  logger.c  logger.h  pager.h  pool.c  pool.h  simple_pool.h  vector.c  vector.h
tester/: CMakeLists.txt
tester/src/: test_utils.h
tester/tests/: caching.c  file_manager.c  linked_block.c  linked_pages.c  page_pool.c  pager.c  parray.c  pool.c  pstack.c  schema.c  simple_test.c  table-gen.c  table.c  table_add.c  varchar_manager.c
